--- a/css/layout.css
+++ b/css/layout.css
@@ -18,6 +18,52 @@
   width: 100%;
 }
 
+.flex-column {
+  flex-direction: column;
+}
+
+.justify-end {
+  justify-content: end;
+}
+
+.purple-background {
+  background-color: rgb(86, 43, 129);
+}
+
+.white-text {
+  color: white;
+}
+
+.gray-background {
+  background-color: rgb(240, 240, 240);
+}
+
+.image-container {
+  width: 100%;
+}
+
+.image-size {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+button {
+  color: white;
+  padding: 0 12px;
+  border: none;
+  border-radius: 3px;
+  height: 30px;
+  width: 90px;
+}
+
+.padding-top {
+  padding-top: 20px;
+}
+
+.padding-bottom {
+  padding-bottom: 20px;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 900px;
