Added some dummy journal entries to the unordered list in the HTML and style them to match the wireframe.

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,18 @@ button {
 .padding-bottom {
   padding-bottom: 5px;
 }
+
+.align-center {
+  align-items: center;
+}
+
+.height-100 {
+  height: 100%;
+}
+
+ul,
+li {
+  margin-left: 0;
+  padding-left: 0;
+  list-style: none;
+}
