--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
   object-fit: contain;
 }
 
-button {
+.button {
   color: white;
   padding: 0 12px;
   border: none;
@@ -68,6 +68,6 @@ li {
   display: none;
 }
 
-.padding-left-right {
-  padding: 0 5px;
+.padding-left {
+  padding-left: 15px;
 }
