Update entry rendering function to include an edit icon for each rendered entry.

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,15 @@ li {
 a {
   padding: 0 15px;
 }
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.purple-pen {
+  color: rgb(86, 43, 129);
+}
+
+.pen-size {
+  font-size: 30px;
+}
