--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,10 @@ li {
   display: none;
 }
 
+.hidden-delete-button {
+  display: none;
+}
+
 .padding-left {
   padding-left: 15px;
 }
@@ -100,4 +104,46 @@ a {
   color: red;
   text-decoration: underline;
   border: none;
+}
+
+.background-dark {
+  background-color: rgba(20, 20, 20, 0.89);
+  width: 100vw;
+  height: 100vh;
+}
+
+.center-of-page {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  left: 600px;
+}
+
+.white-box {
+  height: 200px;
+  width: 500px;
+  background-color: white;
+  border-radius: 5px;
+  margin-top: 200px;
+}
+
+.position-fixed {
+  position: fixed;
+}
+
+.cancel-button {
+  background-color: gray;
+  border: none;
+  border-radius: 3px;
+  height: 30px;
+  width: 90px;
+}
+
+.confirm-button {
+  color: white;
+  background-color: red;
+  border: none;
+  border-radius: 3px;
+  height: 30px;
+  width: 110px;
 }
