--- a/css/styles.css
+++ b/css/styles.css
@@ -114,14 +114,12 @@ a {
 
 .center-of-page {
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  left: 600px;
 }
 
 .white-box {
   height: 200px;
-  width: 500px;
+  width: 400px;
   background-color: white;
   border-radius: 5px;
   margin-top: 200px;
@@ -146,4 +144,8 @@ a {
   border-radius: 3px;
   height: 30px;
   width: 110px;
+}
+
+.button-content-height {
+  height: 50%;
 }
